Fix: Fixed random horizontal scrolling on all pages.  Disabled horizontal scrolling on all body tags for each page.

--- a/client/wolflite/src/assets/stylesheets/index.css
+++ b/client/wolflite/src/assets/stylesheets/index.css
@@ -31,6 +31,7 @@ body,
   max-width: 100vw;
   background-color: var(--background);
   font-family: var(--mainFont);
+  overflow-x: hidden;
 }
 
 
